// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VoteDetail should not render if not open 1`] = `<DocumentFragment />`;

exports[`VoteDetail should render a modal 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-50 w-full h-full overflow-y-scroll"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-AxhCb pcYUy absolute top-0 left-0 right-0 z-50 flex flex-col p-10 mx-auto mt-24 mb-24 overflow-hidden rounded-xl bg-theme-background"
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded bg-theme-primary-100 hover:text-white hover:bg-theme-neutral-900"
      >
        <button
          class="sc-AxiKw eWLnbL w-11 h-11"
          color="primary"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="sc-AxirZ fFqjhX"
            height="14"
            width="14"
          >
            <svg>
              cross-slim.svg
            </svg>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <h2
          class="mb-0 text-3xl font-bold"
        >
          Delegate Vote
        </h2>
        <div
          class="flex-1"
        >
          <div
            class="sc-AxheI dlZkJI"
            data-testid="TransactionDetail"
          >
            <div
              class="flex-1 space-y-2"
            >
              <div
                class="text-sm font-semibold text-theme-neutral"
              >
                Account
              </div>
              <div
                class="font-semibold"
              >
                <span
                  class="sc-AxhUy kMyssT text-theme-neutral"
                  data-testid="TruncateMiddle"
                >
                  D8rr7B…s6YUYD
                </span>
              </div>
            </div>
            <div
              class="flex items-center"
            >
              <div
                class="sc-AxjAm fJvtfB -mr-2 border-black"
              >
                <div
                  class="sc-AxirZ dCVESD"
                  height="25"
                  width="25"
                >
                  <svg>
                    delegate.svg
                  </svg>
                </div>
              </div>
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gfBbJl"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            data-testid="VoteDetails__delegates-container"
          >
            <div
              class="sc-AxheI dlZkJI"
              data-testid="TransactionDetail"
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Voter
                </div>
                <div
                  class="font-semibold"
                >
                  arkx
                  <span
                    class="sc-AxhUy kMyssT ml-2 text-theme-neutral"
                    data-testid="VoteDetail__delegate__address"
                  >
                    D61mfS…J3Dyib
                  </span>
                </div>
              </div>
              <div
                class="flex"
              >
                <div
                  class="sc-AxjAm fJvtfB -mr-2 border-black"
                >
                  <div
                    class="sc-AxirZ eyApFr"
                    height="13"
                    width="13"
                  >
                    <svg>
                      voted.svg
                    </svg>
                  </div>
                </div>
                <div
                  class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gfBbJl"
                  data-testid="Avatar"
                >
                  <div
                    class="w-full h-full"
                  >
                    <img
                      alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                      title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="sc-AxheI dlZkJI"
            data-testid="TransactionDetail"
          >
            <div
              class="flex-1 space-y-2"
            >
              <div
                class="text-sm font-semibold text-theme-neutral"
              >
                Transaction Fee
              </div>
              <div
                class="font-semibold"
              >
                21.00000000 undefined
              </div>
            </div>
          </div>
          <div
            class="sc-AxheI dlZkJI"
            data-testid="TransactionDetail"
          >
            <div
              class="flex-1 space-y-2"
            >
              <div
                class="text-sm font-semibold text-theme-neutral"
              >
                Timestamp
              </div>
              <div
                class="font-semibold"
              >
                31.07.2020 16:34:41
              </div>
            </div>
          </div>
          <div
            class="sc-AxheI dlZkJI"
            data-testid="TransactionDetail"
          >
            <div
              class="flex-1 space-y-2"
            >
              <div
                class="text-sm font-semibold text-theme-neutral"
              >
                Confirmations
              </div>
              <div
                class="font-semibold"
              >
                <div
                  class="flex"
                >
                  Not Confirmed
                  <div
                    class="flex w-6 h-6 ml-2 rounded-full bg-theme-danger-200 text-theme-danger-500"
                  >
                    <div
                      class="m-auto"
                    >
                      <div
                        class="sc-AxirZ hDwaov"
                        height="12"
                        width="12"
                      >
                        <svg>
                          cross-slim.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="sc-AxheI dlZkJI"
            data-testid="TransactionDetail"
          >
            <div
              class="flex-1 space-y-2"
            >
              <div
                class="text-sm font-semibold text-theme-neutral"
              >
                ID
              </div>
              <div
                class="font-semibold"
              >
                <span
                  class="sc-AxhUy kMyssT text-theme-primary-dark"
                  data-testid="TruncateMiddle"
                >
                  ee4175…3ecefe
                </span>
                <span
                  class="inline-block ml-4 text-theme-primary-300"
                >
                  <div
                    class="sc-AxirZ iQaTP"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      copy.svg
                    </svg>
                  </div>
                </span>
              </div>
            </div>
          </div>
          <div
            class="sc-AxheI dlZkJI"
            data-testid="TransactionDetail"
          >
            <div
              class="flex-1 space-y-2"
            >
              <div
                class="text-sm font-semibold text-theme-neutral"
              >
                Block ID
              </div>
              <div
                class="font-semibold"
              >
                <span
                  class="sc-AxhUy kMyssT text-theme-primary-dark"
                  data-testid="TruncateMiddle"
                >
                  71fd1a…5d67e9
                </span>
                <span
                  class="inline-block ml-4 text-theme-primary-300"
                >
                  <div
                    class="sc-AxirZ iQaTP"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      copy.svg
                    </svg>
                  </div>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VoteDetail should render a modal as confirmed 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-50 w-full h-full overflow-y-scroll"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-AxhCb pcYUy absolute top-0 left-0 right-0 z-50 flex flex-col p-10 mx-auto mt-24 mb-24 overflow-hidden rounded-xl bg-theme-background"
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded bg-theme-primary-100 hover:text-white hover:bg-theme-neutral-900"
      >
        <button
          class="sc-AxiKw eWLnbL w-11 h-11"
          color="primary"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="sc-AxirZ fFqjhX"
            height="14"
            width="14"
          >
            <svg>
              cross-slim.svg
            </svg>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <h2
          class="mb-0 text-3xl font-bold"
        >
          Delegate Vote
        </h2>
        <div
          class="flex-1"
        >
          <div
            class="sc-AxheI dlZkJI"
            data-testid="TransactionDetail"
          >
            <div
              class="flex-1 space-y-2"
            >
              <div
                class="text-sm font-semibold text-theme-neutral"
              >
                Account
              </div>
              <div
                class="font-semibold"
              >
                <span
                  class="sc-AxhUy kMyssT text-theme-neutral"
                  data-testid="TruncateMiddle"
                >
                  D8rr7B…s6YUYD
                </span>
              </div>
            </div>
            <div
              class="flex items-center"
            >
              <div
                class="sc-AxjAm fJvtfB -mr-2 border-black"
              >
                <div
                  class="sc-AxirZ dCVESD"
                  height="25"
                  width="25"
                >
                  <svg>
                    delegate.svg
                  </svg>
                </div>
              </div>
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gfBbJl"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            data-testid="VoteDetails__delegates-container"
          >
            <div
              class="sc-AxheI dlZkJI"
              data-testid="TransactionDetail"
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Voter
                </div>
                <div
                  class="font-semibold"
                >
                  arkx
                  <span
                    class="sc-AxhUy kMyssT ml-2 text-theme-neutral"
                    data-testid="VoteDetail__delegate__address"
                  >
                    D61mfS…J3Dyib
                  </span>
                </div>
              </div>
              <div
                class="flex"
              >
                <div
                  class="sc-AxjAm fJvtfB -mr-2 border-black"
                >
                  <div
                    class="sc-AxirZ eyApFr"
                    height="13"
                    width="13"
                  >
                    <svg>
                      voted.svg
                    </svg>
                  </div>
                </div>
                <div
                  class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gfBbJl"
                  data-testid="Avatar"
                >
                  <div
                    class="w-full h-full"
                  >
                    <img
                      alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                      title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="sc-AxheI dlZkJI"
            data-testid="TransactionDetail"
          >
            <div
              class="flex-1 space-y-2"
            >
              <div
                class="text-sm font-semibold text-theme-neutral"
              >
                Transaction Fee
              </div>
              <div
                class="font-semibold"
              >
                21.00000000 undefined
              </div>
            </div>
          </div>
          <div
            class="sc-AxheI dlZkJI"
            data-testid="TransactionDetail"
          >
            <div
              class="flex-1 space-y-2"
            >
              <div
                class="text-sm font-semibold text-theme-neutral"
              >
                Timestamp
              </div>
              <div
                class="font-semibold"
              >
                31.07.2020 16:34:41
              </div>
            </div>
          </div>
          <div
            class="sc-AxheI dlZkJI"
            data-testid="TransactionDetail"
          >
            <div
              class="flex-1 space-y-2"
            >
              <div
                class="text-sm font-semibold text-theme-neutral"
              >
                Confirmations
              </div>
              <div
                class="font-semibold"
              >
                <div
                  class="flex"
                >
                  Well Confirmed
                  <div
                    class="flex w-6 h-6 ml-2 rounded-full bg-theme-success-200 text-theme-success-500"
                  >
                    <div
                      class="m-auto"
                    >
                      <div
                        class="sc-AxirZ fkjLBb"
                        height="15"
                        width="15"
                      >
                        <svg>
                          checkmark.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="sc-AxheI dlZkJI"
            data-testid="TransactionDetail"
          >
            <div
              class="flex-1 space-y-2"
            >
              <div
                class="text-sm font-semibold text-theme-neutral"
              >
                ID
              </div>
              <div
                class="font-semibold"
              >
                <span
                  class="sc-AxhUy kMyssT text-theme-primary-dark"
                  data-testid="TruncateMiddle"
                >
                  ee4175…3ecefe
                </span>
                <span
                  class="inline-block ml-4 text-theme-primary-300"
                >
                  <div
                    class="sc-AxirZ iQaTP"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      copy.svg
                    </svg>
                  </div>
                </span>
              </div>
            </div>
          </div>
          <div
            class="sc-AxheI dlZkJI"
            data-testid="TransactionDetail"
          >
            <div
              class="flex-1 space-y-2"
            >
              <div
                class="text-sm font-semibold text-theme-neutral"
              >
                Block ID
              </div>
              <div
                class="font-semibold"
              >
                <span
                  class="sc-AxhUy kMyssT text-theme-primary-dark"
                  data-testid="TruncateMiddle"
                >
                  71fd1a…5d67e9
                </span>
                <span
                  class="inline-block ml-4 text-theme-primary-300"
                >
                  <div
                    class="sc-AxirZ iQaTP"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      copy.svg
                    </svg>
                  </div>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VoteDetail should render a modal with wallet alias 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-50 w-full h-full overflow-y-scroll"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-AxhCb pcYUy absolute top-0 left-0 right-0 z-50 flex flex-col p-10 mx-auto mt-24 mb-24 overflow-hidden rounded-xl bg-theme-background"
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded bg-theme-primary-100 hover:text-white hover:bg-theme-neutral-900"
      >
        <button
          class="sc-AxiKw eWLnbL w-11 h-11"
          color="primary"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="sc-AxirZ fFqjhX"
            height="14"
            width="14"
          >
            <svg>
              cross-slim.svg
            </svg>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <h2
          class="mb-0 text-3xl font-bold"
        >
          Delegate Vote
        </h2>
        <div
          class="flex-1"
        >
          <div
            class="sc-AxheI dlZkJI"
            data-testid="TransactionDetail"
          >
            <div
              class="flex-1 space-y-2"
            >
              <div
                class="text-sm font-semibold text-theme-neutral"
              >
                Account
              </div>
              <div
                class="font-semibold"
              >
                Wallet Alias
                <span
                  class="sc-AxhUy kMyssT ml-2 text-theme-neutral"
                  data-testid="TruncateMiddle"
                >
                  D8rr7B…s6YUYD
                </span>
              </div>
            </div>
            <div
              class="flex items-center"
            >
              <div
                class="sc-AxjAm fJvtfB -mr-2 border-black"
              >
                <div
                  class="sc-AxirZ dCVESD"
                  height="25"
                  width="25"
                >
                  <svg>
                    delegate.svg
                  </svg>
                </div>
              </div>
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gfBbJl"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            data-testid="VoteDetails__delegates-container"
          >
            <div
              class="sc-AxheI dlZkJI"
              data-testid="TransactionDetail"
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Voter
                </div>
                <div
                  class="font-semibold"
                >
                  arkx
                  <span
                    class="sc-AxhUy kMyssT ml-2 text-theme-neutral"
                    data-testid="VoteDetail__delegate__address"
                  >
                    D61mfS…J3Dyib
                  </span>
                </div>
              </div>
              <div
                class="flex"
              >
                <div
                  class="sc-AxjAm fJvtfB -mr-2 border-black"
                >
                  <div
                    class="sc-AxirZ eyApFr"
                    height="13"
                    width="13"
                  >
                    <svg>
                      voted.svg
                    </svg>
                  </div>
                </div>
                <div
                  class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gfBbJl"
                  data-testid="Avatar"
                >
                  <div
                    class="w-full h-full"
                  >
                    <img
                      alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                      title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="sc-AxheI dlZkJI"
            data-testid="TransactionDetail"
          >
            <div
              class="flex-1 space-y-2"
            >
              <div
                class="text-sm font-semibold text-theme-neutral"
              >
                Transaction Fee
              </div>
              <div
                class="font-semibold"
              >
                21.00000000 undefined
              </div>
            </div>
          </div>
          <div
            class="sc-AxheI dlZkJI"
            data-testid="TransactionDetail"
          >
            <div
              class="flex-1 space-y-2"
            >
              <div
                class="text-sm font-semibold text-theme-neutral"
              >
                Timestamp
              </div>
              <div
                class="font-semibold"
              >
                31.07.2020 16:34:41
              </div>
            </div>
          </div>
          <div
            class="sc-AxheI dlZkJI"
            data-testid="TransactionDetail"
          >
            <div
              class="flex-1 space-y-2"
            >
              <div
                class="text-sm font-semibold text-theme-neutral"
              >
                Confirmations
              </div>
              <div
                class="font-semibold"
              >
                <div
                  class="flex"
                >
                  Not Confirmed
                  <div
                    class="flex w-6 h-6 ml-2 rounded-full bg-theme-danger-200 text-theme-danger-500"
                  >
                    <div
                      class="m-auto"
                    >
                      <div
                        class="sc-AxirZ hDwaov"
                        height="12"
                        width="12"
                      >
                        <svg>
                          cross-slim.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="sc-AxheI dlZkJI"
            data-testid="TransactionDetail"
          >
            <div
              class="flex-1 space-y-2"
            >
              <div
                class="text-sm font-semibold text-theme-neutral"
              >
                ID
              </div>
              <div
                class="font-semibold"
              >
                <span
                  class="sc-AxhUy kMyssT text-theme-primary-dark"
                  data-testid="TruncateMiddle"
                >
                  ee4175…3ecefe
                </span>
                <span
                  class="inline-block ml-4 text-theme-primary-300"
                >
                  <div
                    class="sc-AxirZ iQaTP"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      copy.svg
                    </svg>
                  </div>
                </span>
              </div>
            </div>
          </div>
          <div
            class="sc-AxheI dlZkJI"
            data-testid="TransactionDetail"
          >
            <div
              class="flex-1 space-y-2"
            >
              <div
                class="text-sm font-semibold text-theme-neutral"
              >
                Block ID
              </div>
              <div
                class="font-semibold"
              >
                <span
                  class="sc-AxhUy kMyssT text-theme-primary-dark"
                  data-testid="TruncateMiddle"
                >
                  71fd1a…5d67e9
                </span>
                <span
                  class="inline-block ml-4 text-theme-primary-300"
                >
                  <div
                    class="sc-AxirZ iQaTP"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      copy.svg
                    </svg>
                  </div>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
